<resources>
    <string name="app_name">EvYaSa</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_mobile">Mobile Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_btype">Blood Type</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="choose_btype">Choose Blood Type</string>


    <string-array name="blood_type">
        <item>A RH+</item>
        <item>B RH+</item>
        <item>AB RH+</item>
        <item>0 RH+</item>
        <item>A RH-</item>
        <item>B RH-</item>
        <item>AB RH-</item>
        <item>0 RH-</item>
    </string-array>
    <string name="title_activity_naviga">NavigaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
